fixed css grid for form.  Need to fix spacing between expiration month/year and cvv.  Need to add functionality to form

--- a/app/index.css
+++ b/app/index.css
@@ -40,35 +40,39 @@ html, body {
 
 .form  {
   display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-template-rows: auto auto auto;
   grid-template-areas: 
     "number number number number"
     "name name name name"
     "month year . cvv"
     "button button button button";
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto auto auto;
   border: 5px purple solid;
   height: 100%;
 }
 
-.number {
+.form label {
+  display: block;
+}
+
+#number {
   grid-area: number;
 }
 
-.name {
+#name {
   grid-area: name;
 
 }
 
-.month {
-  grid-area: expiration;
+#month {
+  grid-area: month;
 }
 
-.year {
+#year {
   grid-area: year;
 }
 
-.cvv {
+#cvv {
   grid-area: cvv;
 
 }
@@ -80,8 +84,9 @@ html, body {
 .submit {
   background-color: #00BFFF;
   font-weight: bold;
-  padding: 12px 15px;
+  padding: 15px 150px;
   color: #ffffff;
+  border-radius: 20px;
 }
 
 
